--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@ ga('send', 'pageview');
 		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
-		<br />
+	  <br />
+		<strong>
+		Associate Director <br />
+		<a href="https://icsp.franklin.uga.edu/">Institue for Cybersecurity and Privacy</a> <br />
+		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
+		</strong>
+	<br />
 </tr>
 <tr>
-		415 Boyd Graduate Studies Research Center,  <br />
+		<!---415 Boyd Graduate Studies Research Center,  <br />
 		Dept. of Computer Science  <br />
-		Athens, Georgia, 30602 <br /> <br>
+		Athens, Georgia, 30602 <br /> <br> --->
 
 		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
 		Room: GSRC 638B<br>
@@ -101,8 +107,8 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
 		<LI>CSCI4250/6250 - Computer Security [Spring2018]
-		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019, Fall 2020]
-		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019, Fall 2020, Spring 2021]
+		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018, Spring 2021]
 		<LI>CSCI8060 - Advanced Software Engineering [Spring2015, Fall2016]
 		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
 		</UL>
@@ -115,13 +121,22 @@ ga('send', 'pageview');
 		<UL>
 			<LI>Xingzi Yuan (PhD student)
 			<LI>Omid Setayeshfar (PhD student)
-			<LI>Karthika Subramani (PhD student)
-			<LI>Ruoyan Cai (PhD student)
 			<LI>An Chen (PhD student)
-			<LI>Sean Frankum (Master's student)
-			<LI>Akshay Kokane (Master's student)
-			<LI>Matt Jones (Undergrad student)
-			<LI>Anderson Kunho Kim (Undergrad student)
+			<LI>Mohd Hasan (PhD student)
+		</UL>
+	</p>
+</div>
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Former Students:</p>
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
+		<UL>
+			<LI>Omid Setayeshfar (Facebook)
+			<LI>Ruoyan Cai (Amazon)
+			<LI>Sean Frankum (United States Department of Defense)
+			<LI>Akshay Kokane (OneTrust)
+			<LI>Matt Jones (Ph.D student at Georgia Tech)
+			<LI>Anderson Kunho Kim (Master student at Georgia Tech)
 		</UL>
 	</p>
 </div>
@@ -132,11 +147,31 @@ ga('send', 'pageview');
 		<br><p class="year_style">2021</p>
 		<p>
 			<p>
+				<span class="title">Find My Sloths: Automated Comparative Analysis of How Real Enterprise Computers Keep Up with the Software Update Races</span>
+				<span class="author">Omid Setayeshfar, John Junghwan Rhee, Chung Hwan Kim, Kyu Hyung Lee.</span>
+				<span class="conf">In Proceedings of the 8th Conference on Detection of Intrusions and Malware & Vulnerability Assessment</span>
+				<span class="conf_abbr"> (DIMVA 2021)</span>
+
+			</p>
+			<p>
+				<span class="title">Graalf: Supporting graphical analysis of audit logs for forensics</span>
+				<span class="author">Omid Setayeshfar, Christian Adkins, Matthew Jones, Kyu Hyung Lee, Prashant Doshi.</span>
+				<span class="conf">In Software Impacts</span>
+				<a href="https://www.sciencedirect.com/science/article/pii/S2665963821000166" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
+				<span class="title">A Novel AI-based Methodology for Identifying Cyber Attacks in Honey Pots</span>
+				<span class="author">Muhammed AbuOdeh, Christian Adkins, Omid Setayeshfar, Prashant Doshi, Kyu Hyung Lee.</span>
+				<span class="conf">In Innovative Applications of AI, Emerging Applications</span>
+				<span class="conf_abbr">(AAAI'21)</span>
+				<a href="https://www.semanticscholar.org/paper/A-Novel-AI-based-Methodology-for-Identifying-Cyber-AbuOdeh-Adkins/b6050bbc2a61fcfdc4204f009ad75ee21d2dee5e" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
 				<span class="title">C2SR: Cybercrime Scene Reconstruction for Post-mortem Forensic Analysis</span>
 				<span class="author">Yonghwi Kwon, Weihang Wang, Jinho Jung, Kyu Hyung Lee, Roberto Perdisci.</span>
 				<span class="conf">In Proceedings of the 28th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'21)</span>
-				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
+				<a href="https://www.ndss-symposium.org/ndss-paper/c2sr-cybercrime-scene-reconstruction-for-post-mortem-forensic-analysis/" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 
 			<br><p class="year_style">2020</p>
@@ -146,7 +181,7 @@ ga('send', 'pageview');
 					<span class="author">Karthika Subramani, Xingzi Yuan, Omid Setayeshfar, Phani Vadrevu, Kyu Hyung Lee, Roberto Perdisci.</span>
 					<span class="conf">In Proceedings of the ACM Internet Measurement Conference 2020</span>
 					<span class="conf_abbr"> (IMC'20)</span>
-					<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
+					<a href="https://dl.acm.org/doi/10.1145/3419394.3423631" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 				</p>
 
 		<br><p class="year_style">2019</p>
