--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@ ga('send', 'pageview');
 			<LI>Akshay Kokane (OneTrust)
 			<LI>Matt Jones (Ph.D student at Georgia Tech)
 			<LI>Anderson Kunho Kim (Master student at Georgia Tech)
+			<LI>Urvashi Sharma (Goldman Sachs)
+			<LI>Lovina D'mello (Oracle)
+			<LI>Pranav Panage (Shape Security)	
 		</UL>
 	</p>
 </div>
