--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ ga('send', 'pageview');
 				<span class="title">Find My Sloths: Automated Comparative Analysis of How Real Enterprise Computers Keep Up with the Software Update Races</span>
 				<span class="author">Omid Setayeshfar, John Junghwan Rhee, Chung Hwan Kim, Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 8th Conference on Detection of Intrusions and Malware & Vulnerability Assessment</span>
-				<span class="conf_abbr"> (DIMVA 2021)</span>
+				<span class="conf_abbr"> (DIMVA'21)</span>
 
 			</p>
 			<p>
