--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">I'm a 5th year Ph.D student in Department of Computer Science, Purdue University.
 		-->
 		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
-		I'm an Associate Professor of Computer Science Department at the University of Georgia.
-		I received my PhD in Computer Science at Purdue University.
+		I am an Associate Professor in the Computer Science department at the University of Georgia and an Associate Director in the Institute for Cybersecurity and Privacy. I have a Ph.D from the Department of Computer Science at Purdue University.
 		I was co-advised by  <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang</a> and
 		<a href="http://www.cs.purdue.edu/homes/dxu/">Dr. Dongyan Xu.</a>
 		<!-- My advisor is <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang.</a>
@@ -87,6 +86,8 @@ ga('send', 'pageview');
 		-->
 		I got my Master and B.S in Computer Engineering from <a href="http://www.ce.hongik.ac.kr/">Hong-Ik University</a> in Korea,
 		and and my Master's thesis advisor was <a href="https://sites.google.com/a/necsst.ce.hongik.ac.kr/necsstopen/people/samhnoh">Dr. Sam H. Noh.</a>
+		<br>
+		My research focuses on software security and cyber forensics. I am particularly interested in building practical solutions to improve the security and reliability of software and systems. I am also interested in developing fundamental primitives to analyze and investigate advanced cyber-attacks.
 		<br>
 
 </div>
