--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">I'm a 5th year Ph.D student in Department of Computer Science, Purdue University.
 		-->
 		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
-		I am an Associate Professor in the Computer Science department at the University of Georgia and an Associate Director in the Institute for Cybersecurity and Privacy. 
+		I am an Associate Professor in the Computer Science department at the University of Georgia and an Associate Director in the Institute for Cybersecurity and Privacy.
 		<br>
 		I have a Ph.D from the Department of Computer Science at Purdue University.
 		I was co-advised by  <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang</a> and
@@ -122,9 +122,10 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Current Students:</p>
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
-			<LI>Xingzi Yuan (PhD student)
 			<LI>An Chen (PhD student)
 			<LI>Mohd Hasan (PhD student)
+			<LI>Basanta Chaulagain (PhD student)
+			<LI>Pranay Kumar (MS student)
 		</UL>
 	</p>
 </div>
@@ -133,6 +134,7 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Former Students:</p>
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
+			<LI>Xingzi Yuan (Square)
 			<LI>Omid Setayeshfar (Facebook)
 			<LI>Ruoyan Cai (Amazon)
 			<LI>Sean Frankum (United States Department of Defense)
@@ -141,7 +143,7 @@ ga('send', 'pageview');
 			<LI>Anderson Kunho Kim (Master student at Georgia Tech)
 			<LI>Urvashi Sharma (Goldman Sachs)
 			<LI>Lovina D'mello (Oracle)
-			<LI>Pranav Panage (Shape Security)	
+			<LI>Pranav Panage (Shape Security)
 		</UL>
 	</p>
 </div>
@@ -152,11 +154,25 @@ ga('send', 'pageview');
 		<br><p class="year_style">2021</p>
 		<p>
 			<p>
+				<span class="title">TRACE: Enterprise-Wide Provenance Tracking for Real-Time APT Detection</span>
+				<span class="author">Hassaan Irshad, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran, Kyu Hyung Lee, Jignesh Patel, Somesh Jha, Yonghwi Kwon, Dongyan Xu, and Xiangyu Zhang.</span>
+				<span class="conf">In IEEE Transactions on Information Forensics and Security</span>
+				<span class="conf_abbr"> (IEEE TIFS 2021)</span>
+				<a href="https://ieeexplore.ieee.org/document/9492041" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
+				<span class="title">ChatterHub: Privacy Invasion via Smart Home Hub</span>
+				<span class="author">Omid Setayeshfar, Karthika Subramani, Xingzi Yuan, Raunak Dey, Dezhi Hong, Kyu Hyung Lee, In Kee Kim.</span>
+				<span class="conf">In Proceedings of the IEEE International Conference on Smart Computing</span>
+				<span class="conf_abbr"> (SMARTCOMP'21)</span>
+				<a href="https://ieeexplore.ieee.org/document/9556231" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
 				<span class="title">Find My Sloths: Automated Comparative Analysis of How Real Enterprise Computers Keep Up with the Software Update Races</span>
 				<span class="author">Omid Setayeshfar, John Junghwan Rhee, Chung Hwan Kim, Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 8th Conference on Detection of Intrusions and Malware & Vulnerability Assessment</span>
 				<span class="conf_abbr"> (DIMVA'21)</span>
-
+				<a href="https://link.springer.com/chapter/10.1007/978-3-030-80825-9_11" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 			<p>
 				<span class="title">Graalf: Supporting graphical analysis of audit logs for forensics</span>
