--- a/index.html
+++ b/index.html
@@ -151,8 +151,26 @@ ga('send', 'pageview');
 <div class="block">
 	<p class="paragraph_style_2">Publications:</p>
 
+		<br><p class="year_style">2022</p>
+		<p>
+			<p>
+				<span class="title">Hiding Critical Program Components via Ambiguous Translation</span>
+				<span class="author">Chijung Jung, Doowon Kim, An Chen, Weihang Wang, Yunhui Zheng, Kyu Hyung Lee, and Yonghwi Kwon.</span>
+				<span class="conf">In Proc. of the 44th International Conference on Software Engineering</span>
+				<span class="conf_abbr"> (ICSE 2022)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+
+		</p>
 		<br><p class="year_style">2021</p>
 		<p>
+			<p>
+				<span class="title">Defeating Program Analysis Techniques via Ambiguous Translation</span>
+				<span class="author">Chijung Jung, Doowon Kim, Weihang Wang, Yunhui Zheng, Kyu Hyung Lee, and Yonghwi Kwon.</span>
+				<span class="conf">In Proc. of 36th IEEE/ACM International Conference on Automated Software Engineering (New Ideas and Emerging Results Track)</span>
+				<span class="conf_abbr"> (ASE NIER 2021)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
 			<p>
 				<span class="title">TRACE: Enterprise-Wide Provenance Tracking for Real-Time APT Detection</span>
 				<span class="author">Hassaan Irshad, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran, Kyu Hyung Lee, Jignesh Patel, Somesh Jha, Yonghwi Kwon, Dongyan Xu, and Xiangyu Zhang.</span>
