--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ ga('send', 'pageview');
 			<LI>Ruoyan Cai (Amazon)
 			<LI>Sean Frankum (United States Department of Defense)
 			<LI>Akshay Kokane (OneTrust)
-			<LI>Matt Jones (Ph.D student at Georgia Tech)
+			<LI>Matt Jones (Research Scientist at Georgia Tech Research Institute (CIPHER))
 			<LI>Anderson Kunho Kim (Master student at Georgia Tech)
 			<LI>Urvashi Sharma (Goldman Sachs)
 			<LI>Lovina D'mello (Oracle)
