--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
 			<LI>An Chen (PhD student)
-			<LI>Mohd Hasan (PhD student)
 			<LI>Basanta Chaulagain (PhD student)
-			<LI>Pranay Kumar (MS student)
+			<LI>Kevin Jain (MS student)
+			<LI> Josh Messitte (MS student)
 		</UL>
 	</p>
 </div>
@@ -138,7 +138,7 @@ ga('send', 'pageview');
 			<LI>Omid Setayeshfar (Facebook)
 			<LI>Ruoyan Cai (Amazon)
 			<LI>Sean Frankum (United States Department of Defense)
-			<LI>Akshay Kokane (OneTrust)
+			<LI>Akshay Kokane (Microsoft)
 			<LI>Matt Jones (Research Scientist at Georgia Tech Research Institute (CIPHER))
 			<LI>Anderson Kunho Kim (Master student at Georgia Tech)
 			<LI>Urvashi Sharma (Goldman Sachs)
