--- a/index.html
+++ b/index.html
@@ -150,15 +150,35 @@ ga('send', 'pageview');
 
 <div class="block">
 	<p class="paragraph_style_2">Publications:</p>
+		<br><p class="year_style">2023</p>
+			<p>
+			<p>
+				<span class="title">SynthDB: Synthesizing Database via Program Analysis for Security Testing of Web Applications</span>
+				<span class="author">An Chen, JiHo Lee, Basanta Chaulagain, Yonghwi Kwon, and  Kyu Hyung Lee.</span>
+				<span class="conf">In Proceedings of the 30th Network and Distributed System Security </span>
+				<span class="conf_abbr"> (NDSS'22)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
 
+		</p>
 		<br><p class="year_style">2022</p>
+			<p>
+			<p>
+				<span class="title">Privacy invasion via smart-home hub in personal area networks</span>
+				<span class="author">Omid Setayeshfar, Karthika Subramani, Xingzi Yuan, Raunak Dey, Dezhi Hong, In Kee Kim, and  Kyu Hyung Lee.</span>
+				<span class="conf">In the Pervasive and Mobile Computing Journal </span>
+				<span class="conf_abbr"> (PMC 2022)</span>
+				<a href="https://www.sciencedirect.com/science/article/abs/pii/S1574119222000955" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+
+		</p>
 		<p>
 			<p>
 				<span class="title">Hiding Critical Program Components via Ambiguous Translation</span>
 				<span class="author">Chijung Jung, Doowon Kim, An Chen, Weihang Wang, Yunhui Zheng, Kyu Hyung Lee, and Yonghwi Kwon.</span>
 				<span class="conf">In Proc. of the 44th International Conference on Software Engineering</span>
 				<span class="conf_abbr"> (ICSE 2022)</span>
-				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+				<a href="https://dl.acm.org/doi/abs/10.1145/3510003.3510139" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 
 		</p>
@@ -169,7 +189,7 @@ ga('send', 'pageview');
 				<span class="author">Chijung Jung, Doowon Kim, Weihang Wang, Yunhui Zheng, Kyu Hyung Lee, and Yonghwi Kwon.</span>
 				<span class="conf">In Proc. of 36th IEEE/ACM International Conference on Automated Software Engineering (New Ideas and Emerging Results Track)</span>
 				<span class="conf_abbr"> (ASE NIER 2021)</span>
-				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+				<a href="https://ieeexplore.ieee.org/document/9678912" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 			<p>
 				<span class="title">TRACE: Enterprise-Wide Provenance Tracking for Real-Time APT Detection</span>
