--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ ga('send', 'pageview');
 				<span class="title">SynthDB: Synthesizing Database via Program Analysis for Security Testing of Web Applications</span>
 				<span class="author">An Chen, JiHo Lee, Basanta Chaulagain, Yonghwi Kwon, and  Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 30th Network and Distributed System Security </span>
-				<span class="conf_abbr"> (NDSS'22)</span>
+				<span class="conf_abbr"> (NDSS 2023)</span>
 				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 
