--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ ga('send', 'pageview');
 				<span class="author">An Chen, JiHo Lee, Basanta Chaulagain, Yonghwi Kwon, and  Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 30th Network and Distributed System Security </span>
 				<span class="conf_abbr"> (NDSS 2023)</span>
-				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+				<a href="" target="publications/ndss23-SynthDB.pdf"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 
 		</p>
