--- a/index.html
+++ b/index.html
@@ -157,7 +157,14 @@ ga('send', 'pageview');
 				<span class="author">An Chen, JiHo Lee, Basanta Chaulagain, Yonghwi Kwon, and  Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 30th Network and Distributed System Security </span>
 				<span class="conf_abbr"> (NDSS 2023)</span>
-				<a href="target="publications/ndss23-SynthDB.pdf"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+				<a href="target="https://www.ndss-symposium.org/ndss-paper/synthdb-synthesizing-database-via-program-analysis-for-security-testing-of-web-applications/"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
+				<span class="title">Linking Blockchain Technology and Digital Advertising: How Blockchain Technology Can Enhance Digital Advertising to Be More Effective, Efficient, and Trustworthy
+</span>
+				<span class="author">Jooyoung Kim, Kyu Hyung Lee, and Jaemin Kim</span>
+				<span class="conf">Journal of Business Research </span>
+				<a href="target="https://doi.org/10.1016/j.jbusres.2023.113819"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 
 		</p>
