--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@ ga('send', 'pageview');
 
 <div class="block">
 	<p class="paragraph_style_2">Publications:</p>
+			<br><p class="year_style">2024</p>
+			<p>
+			<p>
+				<span class="title">Unveiling IoT Security in Reality: A Firmware-Centric Journey</span>
+				<span class="author">Nicolas Nino, Ruibo Lu, Wei Zhou, Kyu Hyung Lee, Ziming Zhao, Le Guan.</span>
+				<span class="conf">In Proceedings of the 33th USENIX Security Symposium </span>
+				<span class="conf_abbr"> (Security 2024)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+
 		<br><p class="year_style">2023</p>
 			<p>
 			<p>
