--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ ga('send', 'pageview');
 		Athens, Georgia, 30602 <br /> <br> --->
 
 		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
-		Room: GSRC 638B<br>
+		Room: GSRC 420<br>
 </tr>
 </table>
 
