--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ga('send', 'pageview');
   <br>
 		<strong>
 		Associate Professor <br />
-		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
+		<a href="http://cs.uga.edu/">School of Computing</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
 	  <br />
@@ -63,7 +63,7 @@ ga('send', 'pageview');
 		Dept. of Computer Science  <br />
 		Athens, Georgia, 30602 <br /> <br> --->
 
-		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
+		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-3478 <br >
 		Room: GSRC 420<br>
 </tr>
 </table>
