--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Teaching:</p>
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
+		<LI>CSCI4270/6270 - Introduction to Computer Forensics [Fall 2023]</LI>
 		<LI>CSCI4250/6250 - Computer Security [Spring2018]
-		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019, Fall 2020, Spring 2021]
-		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018, Spring 2021]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019, Fall 2020, Spring 2021, Fall 2022, Fall 2024]
+		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018, Spring 2021, Spring 2023, Spring 2024]
 		<LI>CSCI8060 - Advanced Software Engineering [Spring2015, Fall2016]
 		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
 		</UL>
