--- a/index.html
+++ b/index.html
@@ -171,7 +171,14 @@ ga('send', 'pageview');
 				<span class="conf_abbr"> (Security 2024)</span>
 				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
-
+			<p>
+				<span class="title">RustLIVE: Reducing the Learning Barriers of Rust Through Visualization</span>
+				<span class="author">Diane B. Stephens, Kyu Hyung Lee, Mustakimur Rahman Khandaker.</span>
+				<span class="conf">Frontiers in Education 2024 </span>
+				<span class="conf_abbr"> (FIE 2024)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			</p>
 		<br><p class="year_style">2023</p>
 			<p>
 			<p>
