--- a/index.html
+++ b/index.html
@@ -165,8 +165,15 @@ ga('send', 'pageview');
 			<br><p class="year_style">2024</p>
 			<p>
 			<p>
+				<span class="title">FA-SEAL: Forensically Analyzable Symmetric Encryption for Audit Logs</span>
+				<span class="author">Basanta Chaulagain and Kyu Hyung Lee.</span>
+				<span class="conf">In Proceedings of the 40th Annual Computer Security Applications Conference </span>
+				<span class="conf_abbr"> (ACSAC 2024)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
 				<span class="title">Unveiling IoT Security in Reality: A Firmware-Centric Journey</span>
-				<span class="author">Nicolas Nino, Ruibo Lu, Wei Zhou, Kyu Hyung Lee, Ziming Zhao, Le Guan.</span>
+				<span class="author">Nicolas Nino, Ruibo Lu, Wei Zhou, Kyu Hyung Lee, Ziming Zhao, and Le Guan.</span>
 				<span class="conf">In Proceedings of the 33th USENIX Security Symposium </span>
 				<span class="conf_abbr"> (Security 2024)</span>
 				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
