--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@ ga('send', 'pageview');
 				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
 			<p>
+				<span class="title">Goaltender: Cloud-Based Defense and Response Tools for the DER Ecosystem</span>
+				<span class="author">Yung Ryn Choe, Dalton A Brucker-Hahn, George Fragkos, Keshav Sreekumar, Bailey Nelson, Alexander Safonov, Ryan Sullivant, Aisha B Rahman, Sean Tsikteris, Md Sadman Siraj, Eirini Eleni Tsiropoulou, Jorge Pineda, Jay Johnson, Brian Tansy, Kyu Hyung Lee, Junghwan Rhee</span>
+				<span class="conf">2024 Resilience Week</span>
+				<span class="conf_abbr"> (RWS 2024)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
+			</p>
+			<p>
 				<span class="title">Unveiling IoT Security in Reality: A Firmware-Centric Journey</span>
 				<span class="author">Nicolas Nino, Ruibo Lu, Wei Zhou, Kyu Hyung Lee, Ziming Zhao, and Le Guan.</span>
 				<span class="conf">In Proceedings of the 33th USENIX Security Symposium </span>
