--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ ga('send', 'pageview');
   <br>
 		<strong>
 		Associate Professor <br />
+		Director of Graduate Studies <br />
 		<a href="http://cs.uga.edu/">School of Computing</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
