Update index.html with new research paper entries
Added new research papers and their details to the index.

--- a/index.html
+++ b/index.html
@@ -159,9 +159,19 @@ ga('send', 'pageview');
 				<span class="author">An Chen, Yonghwi Kwon, and Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of the 46th IEEE Symposium on Security and Privacy </span>
 				<span class="conf_abbr"> (S&P 2025)</span>
-				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> paper</a>
 			</p>
-
+			<p>
+				<span class="title">Autoencoder-based Detection of Stealthy Under-billing and Over-billing Attacks via Manipulation of OCPP 2.0.1 Payloads</span>
+				<span class="author">Aisha B Rahman, Md Sadman Siraj, Georgios Fragkos, Prabin Lamichhane, Alexander M Safonov, Ryan Sullivant, Jhaell A Jimenez, Junghwan Rhee, Kyu Hyung Lee, Dalton A Brucker-Hahn, Yung Ryn (Elisha) Choe, and Eirini Eleni Tsiropoulou</span>
+				<span class="conf">IEEE International Workshop on Computer Aided Modeling and Design of Communication Links and Networks </span>
+				<span class="conf_abbr"> (CAMAD 2025)</span>
+			</p>
+			<p>
+				<span class="title">Reevaluating Optional Fields in OCPP 2.0.1: Preliminary Case Study by Spoofing State of Charge</span>
+				<span class="author">Aisha B Rahman, Md Sadman Siraj, Eirini Eleni Tsiropoulou, Georgios Fragkos, Ryan Sullivant, Yung Ryn (Elisha) Choe, Junghwan Rhee, and Kyu Hyung Lee</span>
+				<span class="conf">IEEE International Workshop on Computer Aided Modeling and Design of Communication Links and Networks </span>
+				<span class="conf_abbr"> (CAMAD 2025)</span>
+			</p>
 	
 			<br><p class="year_style">2024</p>
 			<p>
